@@ -21,6 +21,9 @@
 
 * Fixed stuck tooltip after click on the item.
 
+* Improved option to open folder in terminal, it should work with gvfs
+    paths that have resolvable local path as well.
+
 
 Changes on 1.2.3 since 1.2.2:
 
